--- a/projects/demo/src/app/forms/Countries.html
+++ b/projects/demo/src/app/forms/Countries.html
@@ -1,2 +1,10 @@
-This is the countries form
-<input>
+<div name="form">
+    <include src="/html/formheader"></include>
+
+    <div style="display: flex; min-width: 400px; min-height: 200px; width: 100%; height: 100%; justify-content: center;">
+        <div>
+            <p>This is the Countries Form</p>
+            <input>
+        </div>
+    </div>
+</div>
