--- a/projects/demo/src/app/forms.html
+++ b/projects/demo/src/app/forms.html
@@ -1,9 +1,8 @@
 <pageheader></pageheader>
 
-<div class="page">
-    <!--
-    <menu id="main-menu" style="border-right: 1px solid black;"></menu>
-    <forms></forms>
-    -->
+<div #page class="page">
+    <div id="main-menu" style="border-right: 1px solid black;"></div>
+    <div class="form-area"></div>
 </div>
+
 <pagefooter></pagefooter>
