--- a/projects/demo/src/app/forms.html
+++ b/projects/demo/src/app/forms.html
@@ -1,7 +1,9 @@
 <pageheader></pageheader>
 
 <div #page class="page">
-    <div id="main-menu" style="border-right: 1px solid black;"></div>
+    <div>
+        <menu class="menu-left"></menu>
+    </div>
     <div class="form-area"></div>
 </div>
 
