--- a/projects/demo/src/app/forms.html
+++ b/projects/demo/src/app/forms.html
@@ -1,10 +1,10 @@
-<pageheader></pageheader>
+<include src="/html/pageheader"></include>
 
-<div #page class="page">
-    <div>
-        <menu class="menu-left"></menu>
-    </div>
-    <div class="form-area"></div>
+<div class="page">
+	<div id="main-menu" class="menu-left"></div>
+	<forms class="form-area"></forms>
 </div>
 
-<pagefooter></pagefooter>
+<include src="/html/pagefooter"></include>
+
+<script src="test.js"></script>
