--- a/projects/demo/src/app/html/FormHeader.html
+++ b/projects/demo/src/app/html/FormHeader.html
@@ -9,14 +9,14 @@
         <div style="position: relative; display: grid; grid-auto-flow: column; top: 2.5px; height: 16px;">
 
             <span style="position: relative; top: -2px; width: 8px;">
-                <b $click="this.minimize()">-</b>
+                <b frm.click="this.minimize()">-</b>
             </span>
 
-            <span $click="this.toggle()" style="position: relative; display: inline-block; top: 3.5px; height: 6px; width: 6px; border: 1.5px solid black;">
+            <span frm.click="this.toggle()" style="position: relative; display: inline-block; top: 3.5px; height: 6px; width: 6px; border: 1.5px solid black;">
             </span>
 
             <span style="position: relative; top: -2px; width: 8px; margin-left: 2px;">
-                <b $click="this.close()">x</b>
+                <b frm.click="this.close()">x</b>
             </span>
         </div>
     </div>
