--- a/projects/demo/src/app/html/PageFooter.html
+++ b/projects/demo/src/app/html/PageFooter.html
@@ -1,3 +1,3 @@
-<div #formlist class="page-footer">
+<div id="form-list" class="page-footer">
     <img id="icon" src="../../assets/images/form.jpeg" style="display: none;">
 </div>
