--- a/projects/demo/src/app/html/FormHeader.html
+++ b/projects/demo/src/app/html/FormHeader.html
@@ -2,8 +2,7 @@
     <div class="form-header-left">
     </div>
 
-    <div name="title" class="form-header-middle canvas-handle">
-    </div>
+    <div name="title" class="form-header-middle canvas-handle"></div>
 
     <div class="form-header-right">
         <div style="position: relative; display: grid; grid-auto-flow: column; top: 2.5px; height: 16px;">
