--- a/projects/demo/src/app/html/FormHeader.html
+++ b/projects/demo/src/app/html/FormHeader.html
@@ -1,6 +1,5 @@
 <div class="form-header">
-    <div class="form-header-left">
-    </div>
+    <div class="form-header-left"></div>
 
     <div name="title" class="form-header-middle canvas-handle"></div>
 
