--- a/projects/demo/src/app/forms/Countries.html
+++ b/projects/demo/src/app/forms/Countries.html
@@ -10,7 +10,7 @@
 					<th>Name</th>
 				</tr>
 
-				<tr for="row in 1..5" class="block">
+				<tr frm.for="row in 1..5" class="block">
 					<td>
 						<field id="id$row" name="country_id"   block="countries" row="$row" type="x-int"  class="cfld"></field>
 					</td>
