--- a/projects/demo/src/app/forms/Countries.html
+++ b/projects/demo/src/app/forms/Countries.html
@@ -1,7 +1,7 @@
 <div name="form">
     <include src="/html/formheader"></include>
 
-	<button frm.click="this.test()">Test</button>
+	<button onclick="this.test()">Test</button>
 
     <div style="display: flex; min-width: 500px; min-height: 200px; width: 100%; height: 100%; justify-content: center;">
         <div>
@@ -11,7 +11,7 @@
 					<th>Name</th>
 				</tr>
 
-				<tr frm.for="row in 1..5" class="block">
+				<tr for="row in 1..5" class="block">
 					<td>
 						<input id="cc$row" name="country_code" block="countries" row="$row" type="x-fixed" x-pattern="{2A} - {2#}">
 					</td>
