--- a/projects/demo/src/app/html/PageHeader.html
+++ b/projects/demo/src/app/html/PageHeader.html
@@ -1,5 +1,5 @@
 <div class="page-header">
-    <div style="position: relative; top: 2px; left: 2px; height: 16px;" frm.click="this.menu.showmenu()">
+    <div style="position: relative; top: 2px; left: 2px; height: 16px;" onclick="this.menu.showmenu()">
         <div style="height: 3px; width: 16px; margin: 0; padding: 0; border-bottom: 2px solid black;"></div>
         <div style="height: 3px; width: 16px; margin: 0; padding: 0; border-bottom: 2px solid black;"></div>
         <div style="height: 3px; width: 16px; margin: 0; padding: 0; border-bottom: 2px solid black;"></div>
