--- a/projects/demo/src/app/forms/Countries.html
+++ b/projects/demo/src/app/forms/Countries.html
@@ -11,7 +11,7 @@
 					<th>Name</th>
 				</tr>
 
-				<tr for="row in 1..5" class="block">
+				<tr foreach="row in 1..5" class="block">
 					<td>
 						<input id="cc$row" name="country_code" block="countries" row="$row" type="x-fixed" x-pattern="{2A} - {2#}">
 					</td>
