--- a/projects/demo/src/app/forms/fields.html
+++ b/projects/demo/src/app/forms/fields.html
@@ -77,7 +77,7 @@
 						<legend>Data Mapper</legend>
 						<table>
 							<tr>
-								<td>Y/N : </td><td><input name="mapper" block="fields" size="4" upper mapper="/mappers/truefalse"></td>
+								<td>Y/N : </td><td><input name="mapper" block="fields" size="1" maxlength="1" upper mapper="/mappers/truefalse"></td>
 								<td style="padding-left: 20px;">True/False : </td><td><input name="mapper" block="fields" size="4" lower></td>
 							</tr>
 						</table>
